--- a/data/interfaces/preferences.ui
+++ b/data/interfaces/preferences.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<!-- Created with Cambalache 0.92.2 -->
+<!-- Created with Cambalache 0.94.0 -->
 <interface>
   <!-- interface-name preferences.ui -->
   <requires lib="gtk" version="4.16"/>
@@ -61,7 +61,7 @@
                         <property name="subtitle">0 to no limits</property>
                         <property name="subtitle-lines">2</property>
                         <property name="title">Journal's events limit</property>
-                        <signal name="output" handler="journal_events_output" swapped="yes"/>
+                        <signal name="changed" handler="journal_events_changed" swapped="yes"/>
                       </object>
                     </child>
                   </object>
