--- a/data/interfaces/app_window.ui
+++ b/data/interfaces/app_window.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<!-- Created with Cambalache 0.92.2 -->
+<!-- Created with Cambalache 0.94.0 -->
 <interface>
   <!-- interface-name app_window.ui -->
   <requires lib="gtk" version="4.14"/>
@@ -68,7 +68,7 @@
                 </property>
                 <child>
                   <object class="GtkToggleButton" id="search_toggle_button">
-                    <property name="icon-name">system-search</property>
+                    <property name="icon-name">system-search-symbolic</property>
                     <property name="tooltip-text">Open search bar</property>
                     <signal name="toggled" handler="button_search_toggled" swapped="yes"/>
                   </object>
