--- a/data/interfaces/journal_panel.ui
+++ b/data/interfaces/journal_panel.ui
@@ -24,15 +24,41 @@
               <object class="GtkBox">
                 <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkButton" id="journal_refresh_button">
-                    <property name="child">
-                      <object class="AdwButtonContent">
-                        <property name="icon-name">view-refresh</property>
-                        <property name="label">Refresh</property>
+                  <object class="GtkBox">
+                    <property name="spacing">5</property>
+                    <child>
+                      <object class="GtkButton" id="journal_refresh_button">
+                        <property name="child">
+                          <object class="AdwButtonContent">
+                            <property name="halign">baseline</property>
+                            <property name="icon-name">view-refresh</property>
+                            <property name="label">Refresh</property>
+                            <property name="valign">baseline</property>
+                          </object>
+                        </property>
+                        <property name="hexpand">True</property>
+                        <signal name="clicked" handler="refresh_journal_clicked" swapped="yes"/>
                       </object>
-                    </property>
-                    <property name="hexpand">True</property>
-                    <signal name="clicked" handler="refresh_journal_clicked" swapped="yes"/>
+                    </child>
+                    <child>
+                      <object class="GtkButton" id="journal_toggle_sort_button">
+                        <property name="child">
+                          <object class="AdwButtonContent">
+                            <property name="halign">baseline-fill</property>
+                            <property name="icon-name">view-sort-ascending</property>
+                            <property name="label">Sort</property>
+                          </object>
+                        </property>
+                        <property name="hexpand">True</property>
+                        <signal name="clicked" handler="toggle_sort_clicked" swapped="yes"/>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkCheckButton" id="from_last_boot_check_button">
+                        <property name="label">from last boot</property>
+                        <signal name="toggled" handler="from_last_boot_toggled" swapped="yes"/>
+                      </object>
+                    </child>
                   </object>
                 </child>
                 <child>
