--- a/data/interfaces/journal_panel.ui
+++ b/data/interfaces/journal_panel.ui
@@ -70,14 +70,17 @@
                           <object class="GtkSignalListItemFactory">
                             <signal name="setup" handler="event_list_setup" swapped="yes"/>
                             <signal name="bind" handler="event_list_bind" swapped="yes"/>
+                            <signal name="unbind" handler="event_list_unbind" swapped="yes"/>
                           </object>
                         </property>
                         <property name="model">
                           <object class="GtkNoSelection">
                             <property name="model">
-                              <object class="GtkSortListModel">
+                              <object class="GtkSortListModel" id="list_sort_model">
                                 <property name="model">
-                                  <object class="GListStore" id="list_store"/>
+                                  <object class="GListStore" id="list_store">
+                                    <property name="item-type">JournalEvent</property>
+                                  </object>
                                 </property>
                               </object>
                             </property>
