--- a/data/interfaces/journal_panel.ui
+++ b/data/interfaces/journal_panel.ui
@@ -64,7 +64,7 @@
                 <child>
                   <object class="GtkScrolledWindow" id="scrolled_window">
                     <property name="hscrollbar-policy">always</property>
-                    <property name="propagate-natural-width">True</property>
+                    <property name="overlay-scrolling">False</property>
                     <property name="vexpand">True</property>
                     <property name="vscrollbar-policy">always</property>
                     <child>
