--- a/data/interfaces/journal_panel.ui
+++ b/data/interfaces/journal_panel.ui
@@ -9,6 +9,86 @@
   <template class="JournalPanel" parent="GtkBox">
     <property name="orientation">vertical</property>
     <child>
+      <object class="GtkBox">
+        <property name="spacing">5</property>
+        <child>
+          <object class="GtkButton" id="journal_refresh_button">
+            <property name="child">
+              <object class="AdwButtonContent">
+                <property name="halign">baseline</property>
+                <property name="icon-name">view-refresh</property>
+                <property name="label">Refresh</property>
+                <property name="valign">baseline</property>
+              </object>
+            </property>
+            <property name="halign">start</property>
+            <signal name="clicked" handler="refresh_journal_clicked" swapped="yes"/>
+          </object>
+        </child>
+        <child>
+          <object class="GtkButton" id="journal_toggle_sort_button">
+            <property name="child">
+              <object class="AdwButtonContent">
+                <property name="halign">baseline-fill</property>
+                <property name="icon-name">view-sort-ascending</property>
+                <property name="label">Sort</property>
+              </object>
+            </property>
+            <property name="halign">start</property>
+            <property name="hexpand">True</property>
+            <signal name="clicked" handler="toggle_sort_clicked" swapped="yes"/>
+          </object>
+        </child>
+        <child>
+          <object class="AdwSplitButton">
+            <property name="label">Boot</property>
+            <property name="popover">
+              <object class="GtkPopover">
+                <child>
+                  <object class="GtkBox">
+                    <property name="orientation">vertical</property>
+                    <property name="spacing">5</property>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="css-classes">title-1</property>
+                        <property name="label">Boot</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="label">Show messages from a specific boot</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="AdwPreferencesGroup">
+                        <property name="title">Boot Id</property>
+                        <child>
+                          <object class="AdwEntryRow" id="signal_id_entry">
+                            <property name="title">Send signal: </property>
+                            <signal name="changed" handler="boot_id_text_change" swapped="yes"/>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkButton">
+                        <property name="label">All</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkButton">
+                        <property name="label">Last boot</property>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+              </object>
+            </property>
+          </object>
+        </child>
+      </object>
+    </child>
+    <child>
       <object class="GtkStack" id="panel_stack">
         <child>
           <object class="GtkStackPage">
@@ -23,44 +103,6 @@
             <property name="child">
               <object class="GtkBox">
                 <property name="orientation">vertical</property>
-                <child>
-                  <object class="GtkBox">
-                    <property name="spacing">5</property>
-                    <child>
-                      <object class="GtkButton" id="journal_refresh_button">
-                        <property name="child">
-                          <object class="AdwButtonContent">
-                            <property name="halign">baseline</property>
-                            <property name="icon-name">view-refresh</property>
-                            <property name="label">Refresh</property>
-                            <property name="valign">baseline</property>
-                          </object>
-                        </property>
-                        <property name="hexpand">True</property>
-                        <signal name="clicked" handler="refresh_journal_clicked" swapped="yes"/>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkButton" id="journal_toggle_sort_button">
-                        <property name="child">
-                          <object class="AdwButtonContent">
-                            <property name="halign">baseline-fill</property>
-                            <property name="icon-name">view-sort-ascending</property>
-                            <property name="label">Sort</property>
-                          </object>
-                        </property>
-                        <property name="hexpand">True</property>
-                        <signal name="clicked" handler="toggle_sort_clicked" swapped="yes"/>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkCheckButton" id="from_last_boot_check_button">
-                        <property name="label">from last boot</property>
-                        <signal name="toggled" handler="from_last_boot_toggled" swapped="yes"/>
-                      </object>
-                    </child>
-                  </object>
-                </child>
                 <child>
                   <object class="GtkScrolledWindow" id="scrolled_window">
                     <property name="hscrollbar-policy">always</property>
