--- a/data/interfaces/journal_panel.ui
+++ b/data/interfaces/journal_panel.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<!-- Created with Cambalache 0.94.0 -->
+<!-- Created with Cambalache 0.94.1 -->
 <interface>
   <!-- interface-name journal_panel.ui -->
   <!-- interface-description Unit file panel -->
@@ -10,6 +10,8 @@
     <property name="orientation">vertical</property>
     <child>
       <object class="GtkBox">
+        <property name="margin-end">5</property>
+        <property name="margin-start">5</property>
         <property name="spacing">5</property>
         <child>
           <object class="GtkButton" id="journal_refresh_button">
@@ -40,36 +42,15 @@
           </object>
         </child>
         <child>
-          <object class="AdwSplitButton">
+          <object class="GtkMenuButton">
             <property name="label">Boot</property>
             <property name="popover">
               <object class="GtkPopover">
+                <property name="width-request">300</property>
                 <child>
                   <object class="GtkBox">
                     <property name="orientation">vertical</property>
                     <property name="spacing">5</property>
-                    <child>
-                      <object class="GtkLabel">
-                        <property name="css-classes">title-1</property>
-                        <property name="label">Boot</property>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkLabel">
-                        <property name="label">Show messages from a specific boot</property>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="AdwPreferencesGroup">
-                        <property name="title">Boot Id</property>
-                        <child>
-                          <object class="AdwEntryRow" id="signal_id_entry">
-                            <property name="title">Send signal: </property>
-                            <signal name="changed" handler="boot_id_text_change" swapped="yes"/>
-                          </object>
-                        </child>
-                      </object>
-                    </child>
                     <child>
                       <object class="GtkButton">
                         <property name="label">All</property>
@@ -77,7 +58,13 @@
                     </child>
                     <child>
                       <object class="GtkButton">
-                        <property name="label">Last boot</property>
+                        <property name="label">Current</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="AdwEntryRow">
+                        <property name="title">Boot id</property>
+                        <property name="use-underline">True</property>
                       </object>
                     </child>
                   </object>
@@ -128,9 +115,7 @@
                             <property name="model">
                               <object class="GtkSortListModel" id="list_sort_model">
                                 <property name="model">
-                                  <object class="GListStore" id="list_store">
-                                    <property name="item-type">JournalEvent</property>
-                                  </object>
+                                  <object class="GListStore" id="list_store"/>
                                 </property>
                               </object>
                             </property>
