--- a/data/interfaces/journal_panel.ui
+++ b/data/interfaces/journal_panel.ui
@@ -111,6 +111,7 @@
                             <signal name="setup" handler="event_list_setup" swapped="yes"/>
                             <signal name="bind" handler="event_list_bind" swapped="yes"/>
                             <signal name="unbind" handler="event_list_unbind" swapped="yes"/>
+                            <signal name="teardown" handler="event_list_teardown" swapped="yes"/>
                           </object>
                         </property>
                         <property name="hadjustment">
