--- a/data/interfaces/journal_row.ui
+++ b/data/interfaces/journal_row.ui
@@ -15,7 +15,10 @@
     <child>
       <object class="GtkLabel" id="message_label">
         <property name="css-classes">unit_info</property>
+        <property name="ellipsize">end</property>
+        <property name="max-width-chars">3000</property>
         <property name="selectable">True</property>
+        <property name="single-line-mode">True</property>
         <property name="xalign">0.0</property>
         <property name="yalign">0.0</property>
       </object>
