--- a/data/interfaces/unit_list_panel.ui
+++ b/data/interfaces/unit_list_panel.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<!-- Created with Cambalache 0.92.2 -->
+<!-- Created with Cambalache 0.94.1 -->
 <interface>
   <!-- interface-name unit_list_panel.ui -->
   <requires lib="gio" version="2.44"/>
@@ -34,6 +34,7 @@
                       <object class="GtkColumnView" id="units_browser">
                         <property name="model">
                           <object class="GtkSingleSelection" id="single_selection">
+                            <property name="autoselect">False</property>
                             <property name="model">
                               <object class="GtkFilterListModel" id="filter_list_model">
                                 <property name="model">
