--- a/data/interfaces/unit_list_panel.ui
+++ b/data/interfaces/unit_list_panel.ui
@@ -29,8 +29,7 @@
                 </child>
                 <child>
                   <object class="GtkScrolledWindow">
-                    <property name="vexpand">True</property>
-                    <child>
+                    <property name="child">
                       <object class="GtkColumnView" id="units_browser">
                         <property name="model">
                           <object class="GtkSingleSelection" id="single_selection">
@@ -50,7 +49,7 @@
                         </property>
                         <property name="vexpand">True</property>
                         <child>
-                          <object class="GtkColumnViewColumn">
+                          <object class="GtkColumnViewColumn" id="col_name">
                             <property name="factory">
                               <object class="GtkSignalListItemFactory">
                                 <signal name="bind" handler="col_unit_name_factory_setup"/>
@@ -117,7 +116,8 @@ status</property>
                           </object>
                         </child>
                       </object>
-                    </child>
+                    </property>
+                    <property name="vexpand">True</property>
                   </object>
                 </child>
               </object>
