--- a/data/interfaces/journal_panel.ui
+++ b/data/interfaces/journal_panel.ui
@@ -86,6 +86,18 @@
         <child>
           <object class="GtkStackPage">
             <property name="child">
+              <object class="AdwStatusPage">
+                <property name="description">No events can be a good thing</property>
+                <property name="icon-name">dialog-question</property>
+                <property name="title">No journal events</property>
+              </object>
+            </property>
+            <property name="name">empty</property>
+          </object>
+        </child>
+        <child>
+          <object class="GtkStackPage">
+            <property name="child">
               <object class="AdwSpinner"/>
             </property>
             <property name="name">spinner</property>
@@ -128,18 +140,6 @@
               </object>
             </property>
             <property name="name">journal</property>
-          </object>
-        </child>
-        <child>
-          <object class="GtkStackPage">
-            <property name="child">
-              <object class="AdwStatusPage">
-                <property name="description">No events can be good</property>
-                <property name="icon-name">dialog-question</property>
-                <property name="title">No journal events</property>
-              </object>
-            </property>
-            <property name="name">empty</property>
           </object>
         </child>
       </object>
