fix the dep padding

--- a/data/interfaces/unit_dependencies_panel.ui
+++ b/data/interfaces/unit_dependencies_panel.ui
@@ -45,10 +45,12 @@
               <object class="GtkScrolledWindow">
                 <property name="child">
                   <object class="GtkTextView" id="unit_dependencies_textview">
+                    <property name="editable">False</property>
                     <property name="margin-bottom">10</property>
                     <property name="margin-end">10</property>
                     <property name="margin-start">10</property>
                     <property name="margin-top">10</property>
+                    <property name="monospace">True</property>
                     <property name="vexpand">True</property>
                   </object>
                 </property>
