--- a/data/interfaces/unit_dependencies_panel.ui
+++ b/data/interfaces/unit_dependencies_panel.ui
@@ -1,21 +1,14 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <!-- Created with Cambalache 0.94.1 -->
 <interface>
-  <requires lib="gtk" version="4.6"/>
+  <requires lib="gtk" version="4.0"/>
   <requires lib="libadwaita" version="1.6"/>
   <template class="UnitDependenciesPanel" parent="GtkBox">
     <property name="orientation">vertical</property>
     <child>
       <object class="GtkBox">
         <child>
-          <object class="GtkLabel">
-            <property name="label">reverse </property>
-          </object>
-        </child>
-        <child>
-          <object class="GtkSwitch" id="reverse_switch">
-            <property name="valign">baseline-center</property>
-          </object>
+          <object class="GtkDropDown" id="dependency_types_dropdown"/>
         </child>
       </object>
     </child>
