--- a/data/interfaces/unit_dependencies_panel.ui
+++ b/data/interfaces/unit_dependencies_panel.ui
@@ -1,14 +1,27 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <!-- Created with Cambalache 0.94.1 -->
 <interface>
-  <requires lib="gtk" version="4.0"/>
+  <requires lib="gtk" version="4.6"/>
   <requires lib="libadwaita" version="1.6"/>
   <template class="UnitDependenciesPanel" parent="GtkBox">
     <property name="orientation">vertical</property>
     <child>
       <object class="GtkBox">
+        <property name="halign">end</property>
         <child>
-          <object class="GtkDropDown" id="dependency_types_dropdown"/>
+          <object class="GtkDropDown" id="dependency_types_dropdown">
+            <property name="margin-end">5</property>
+          </object>
+        </child>
+        <child>
+          <object class="GtkLabel">
+            <property name="label">plain</property>
+          </object>
+        </child>
+        <child>
+          <object class="GtkCheckButton" id="plain_option_check">
+            <signal name="toggled" handler="plain_option_toggled" swapped="yes"/>
+          </object>
         </child>
       </object>
     </child>
