--- a/data/interfaces/unit_info_panel.ui
+++ b/data/interfaces/unit_info_panel.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<!-- Created with Cambalache 0.92.1 -->
+<!-- Created with Cambalache 0.94.1 -->
 <interface>
   <!-- interface-name unit_info_panel.ui -->
   <requires lib="gtk" version="4.12"/>
@@ -41,6 +41,7 @@
         <child>
           <object class="GtkTextView" id="unit_info_textview">
             <property name="editable">False</property>
+            <property name="monospace">True</property>
           </object>
         </child>
       </object>
