change font working

--- a/data/interfaces/preferences.ui
+++ b/data/interfaces/preferences.ui
@@ -43,6 +43,7 @@
                         <property name="valign">baseline</property>
                         <child>
                           <object class="GtkButton">
+                            <property name="css-classes">suggested-action</property>
                             <property name="label">Select Font</property>
                             <property name="valign">baseline-center</property>
                             <signal name="clicked" handler="select_font_clicked" swapped="yes"/>
