font management full implementation

--- a/data/interfaces/preferences.ui
+++ b/data/interfaces/preferences.ui
@@ -43,6 +43,13 @@
                         <property name="valign">baseline</property>
                         <child>
                           <object class="GtkButton">
+                            <property name="label">Default</property>
+                            <property name="valign">baseline-center</property>
+                            <signal name="clicked" handler="select_font_default" swapped="yes"/>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkButton">
                             <property name="css-classes">suggested-action</property>
                             <property name="label">Select Font</property>
                             <property name="valign">baseline-center</property>
