--- a/data/styles/style.css
+++ b/data/styles/style.css
@@ -12,5 +12,5 @@ label.journal_message {
 
 textview {
     font-family: 'Fira Code', 'Droid Sans Mono', monospace;
-    font-size: 12pt;
+    font-size: 16px;
 }
