journal add newest envent at the top if descending order

--- a/data/interfaces/journal_panel.ui
+++ b/data/interfaces/journal_panel.ui
@@ -9,6 +9,7 @@
     <property name="orientation">vertical</property>
     <child>
       <object class="GtkBox">
+        <property name="margin-bottom">5</property>
         <property name="margin-end">5</property>
         <property name="margin-start">5</property>
         <property name="spacing">5</property>
